--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,18 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Pizza Node</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.bunny.net">
     <link href="https://fonts.bunny.net/css?family=figtree:400,500,600&display=swap" rel="stylesheet" />
 
-    <!-- CSS & JS begin -->
+    <!-- CSS -->
     <link href="/assets/css/normalize.css" rel="stylesheet">
     <link href="/assets/css/main.css" rel="stylesheet">
     <link href="/assets/css/style.css" rel="stylesheet">
 
+    <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="/assets/js/script.js"></script>
 
@@ -22,14 +22,16 @@
 
     <script>
         WebFont.load({
-            google: {families:[
-                    "Oswald:200,300,400,500,600,700",
-                    "Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic",
-                    "Varela:400","Vollkorn:400,400italic,700,700italic","Bitter:400,700,400italic",
-                    "PT Serif:400,400italic,700,700italic",
-                    "Merriweather:300,300italic,400,400italic,700,700italic,900,900italic",
-                    "Roboto:100,300,regular,500,700,900,900italic"
-                ]}
+            google: { families:[
+                "Oswald:200,300,400,500,600,700",
+                "Lato:100,300,400,700,900",
+                "Varela:400",
+                "Vollkorn:400,700",
+                "Bitter:400,700",
+                "PT Serif:400,700",
+                "Merriweather:300,400,700,900",
+                "Roboto:100,300,400,500,700,900"
+            ]}
         });
     </script>
 
@@ -39,45 +41,46 @@
 
 <body class="font-sans antialiased">
 
-<%- include('partials/header.ejs') %>
+    <!-- HEADER -->
+    <%- include('partials/header') %>
 
-<div class="min-h-screen bg-gray-100 bottom-margin-large">
+    <div class="min-h-screen bg-gray-100 bottom-margin-large">
 
-    <% if (typeof header !== 'undefined') { %>
-        <div class="section-hero title">
-            <div class="container w-container">
-                <h1 class="bottom-margin-extra-small"><%= header %></h1>
-                <h3 class="hero-sub-title"></h3>
+        <% if (typeof header !== 'undefined') { %>
+            <div class="section-hero title">
+                <div class="container w-container">
+                    <h1 class="bottom-margin-extra-small"><%= header %></h1>
+                </div>
             </div>
-        </div>
-    <% } %>
+        <% } %>
 
-    <main>
-        <%- body %>
-    </main>
-</div>
-<!-- Footer section begins -->
-<footer class="footer bottom-margin-large"  >
-    <div class="footer-nav-section">
-        <div class="w-container" style="padding: 20px">
-            <div class="w-row">
-                <!-- Footer navigation begins -->
-                <div class="col w-col w-col-6">
-                    <div class="footer-nav-holder">
-                        <div class="uppercase white-link"><p>&copy; <%= new Date().getFullYear() %> Pizza Mester. Minden jog fenntartva.</p></div>
+        <main>
+            <%- body %>
+        </main>
+
+    </div>
+
+    <!-- FOOTER -->
+    <footer class="footer bottom-margin-large">
+        <div class="footer-nav-section">
+            <div class="w-container" style="padding: 20px">
+                <div class="w-row">
+                    <div class="col w-col w-col-6">
+                        <p>&copy; <%= new Date().getFullYear() %> Pizza Mester. Minden jog fenntartva.</p>
+                    </div>
+
+                    <div class="align-right col social w-col w-col-6">
+                        <a class="social-icon w-inline-block" href="http://www.facebook.com" target="_blank">
+                            <img src="/assets/images/footer-facebook.svg" alt="Pizza Mester">
+                        </a>
+                        <a class="social-icon w-inline-block" href="http://www.twitter.com">
+                            <img src="/assets/images/footer-twitter.svg" alt="Pizza Mester">
+                        </a>
                     </div>
                 </div>
-                <!-- Footer navigation ends -->
-                <!-- Footer social media links begin -->
-                <div class="align-right col social w-col w-col-6">
-                    <a class="social-icon w-inline-block" href="http://www.Facebook.com" target="_blank"><img src="/assets/images/footer-facebook.svg" alt="Pizza Mester"></a>
-                    <a class="social-icon w-inline-block" href="http://www.Twitter.com"><img src="/assets/images/footer-twitter.svg" alt="Pizza Mester"></a>
-                </div>
-                <!-- Footer social media links end -->
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 </body>
 </html>
