--- a/views/pages/menu.ejs
+++ b/views/pages/menu.ejs
@@ -1,46 +1,58 @@
 <div class="section">
     <div class="container w-container">
 
-
-
-
         <div class="row w-row">
             <!-- First set of four begins -->
 
-            @forelse ($pizzak as $pizza)
-            <div class="col w-col w-col-4">
-                <!-- Sides & appetizers begin -->
-                <div class="bottom-margin-small three-block-holder-single w-clearfix">
-                    <div class="image-holder">
-                        <img src="/assets/images/menu-images/menu-whole-pizza.png" alt="{{ $pizza->nev }}">
-                        <div class="bottom-margin-small half three-block-content-single">
+            <% if (pizzak && pizzak.length > 0) { %>
+                <% pizzak.forEach(pizza => { %>
 
-                            <div class="menu-title-bg">{{ $pizza->nev }}</div>
-                            <div>
-                                {{ $pizza->kategoria->nev ?? 'N/A' }}
-                                @if ($pizza->vegetarianus)
-                                <span class="inline-block bg-green-100 text-green-800 text-xs font-semibold px-2.5 py-0.5 rounded">
-                                        - Vegetáriánus 🌱
-                                    </span>
-                                @endif
-                            </div>
+                <div class="col w-col w-col-4">
+                    <!-- Sides & appetizers begin -->
+                    <div class="bottom-margin-small three-block-holder-single w-clearfix">
+                        <div class="image-holder">
+                            <img src="/assets/images/menu-images/menu-whole-pizza.png" alt="<%= pizza.name %>">
 
-                            <div class="p-6 pt-0">
-                                <div class="text-lg font-bold text-red-600">
-                                    Ft
+                            <div class="bottom-margin-small half three-block-content-single">
+
+                                <!-- Pizza neve -->
+                                <div class="menu-title-bg"><%= pizza.name %></div>
+
+                                <!-- Kategória + vegetar -->
+                                <div>
+                                    <%= pizza.category ? pizza.category : "N/A" %>
+
+                                    <% if (pizza.vegetarian === 1) { %>
+                                        <span class="inline-block bg-green-100 text-green-800 text-xs font-semibold px-2.5 py-0.5 rounded">
+                                            - Vegetáriánus 🌱
+                                        </span>
+                                    <% } %>
                                 </div>
+
+                                <div class="p-6 pt-0">
+                                    <div class="text-lg font-bold text-red-600">
+                                        Ft
+                                    </div>
+                                </div>
+
+                                <br />
+                                <a class="small-text" href="#">Kosárba →</a>
                             </div>
-                            <br />
-                            <a class="small-text" href="#">Kosárba →</a>
                         </div>
                     </div>
                 </div>
-            </div>
-            @empty
-            <p class="col-span-full text-center text-gray-500 py-10">
-                Jelenleg nincs pizza az étlapon az adatbázisban. Futtasd a seedereket!
-            </p>
-            @endforelse
+
+                <% }) %>
+
+            <% } else { %>
+
+                <!-- Üres lista -->
+                <p class="col-span-full text-center text-gray-500 py-10">
+                    Jelenleg nincs pizza az étlapon az adatbázisban.
+                </p>
+
+            <% } %>
+
         </div>
         <!-- Menu section ends -->
 
