Admin pizzák CRUD hozzáadva (listázás, új, szerkesztés, törlés)

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -59,9 +59,11 @@
                         <div class="dropdown">
                             <a class="main-link w-nav-link" href="#">Admin ▾</a>
                             <ul class="dropdown-menu">
-                                <li><a class="w-nav-link" href="{{ route('admin.pizzak.index') }}">Pizzák</a></li>
-                                <li><a class="w-nav-link" href="{{ route('admin.messages.index') }}">Üzenetek</a></li>
-                                <li><a class="w-nav-link" href="{{ route('admin.orders.index') }}">Rendelések</a></li>
+                                <li><a class="w-nav-link" href="/admin/pizzak">Pizzák</a></li>
+<li><a class="w-nav-link" href="/admin/messages">Üzenetek</a></li>
+<li><a class="w-nav-link" href="/admin/orders">Rendelések</a></li>
+
+
                             </ul>
                         </div>
                     <% }%>
