pizza crud, rendelés

--- a/views/pages/menu.ejs
+++ b/views/pages/menu.ejs
@@ -2,51 +2,52 @@
     <div class="container w-container">
 
         <div class="row w-row">
-            <!-- First set of four begins -->
 
-            <% if (pizzak && pizzak.length > 0) { %>
-                <% pizzak.forEach(pizza => { %>
+            <% if (pizzas.length > 0) { %>
 
-                <div class="col w-col w-col-4">
-                    <!-- Sides & appetizers begin -->
-                    <div class="bottom-margin-small three-block-holder-single w-clearfix">
-                        <div class="image-holder">
-                            <img src="/assets/images/menu-images/menu-whole-pizza.png" alt="<%= pizza.name %>">
+                <% pizzas.forEach(pizza => { %>
+                    <div class="col w-col w-col-4">
 
-                            <div class="bottom-margin-small half three-block-content-single">
+                        <div class="bottom-margin-small three-block-holder-single w-clearfix">
+                            <div class="image-holder">
 
-                                <!-- Pizza neve -->
-                                <div class="menu-title-bg"><%= pizza.name %></div>
+                                <img src="/assets/images/menu-images/menu-whole-pizza.png" alt="<%= pizza.name %>">
 
-                                <!-- Kategória + vegetar -->
-                                <div>
-                                    <%= pizza.category ? pizza.category : "N/A" %>
+                                <div class="bottom-margin-small half three-block-content-single">
 
-                                    <% if (pizza.vegetarian === 1) { %>
-                                        <span class="inline-block bg-green-100 text-green-800 text-xs font-semibold px-2.5 py-0.5 rounded">
-                                            - Vegetáriánus 🌱
-                                        </span>
-                                    <% } %>
-                                </div>
+                                    <!-- Pizza neve -->
+                                    <div class="menu-title-bg"><%= pizza.name %></div>
 
-                                <div class="p-6 pt-0">
-                                    <div class="text-lg font-bold text-red-600">
-                                        Ft
+                                    <!-- Kategória + vegetáriánus -->
+                                    <div>
+                                        <%= pizza.category || 'N/A' %>
+
+                                        <% if (pizza.vegetarianus) { %>
+                                            <span class="inline-block bg-green-100 text-green-800 text-xs font-semibold px-2.5 py-0.5 rounded">
+                                                - Vegetáriánus 🌱
+                                            </span>
+                                        <% } %>
                                     </div>
-                                </div>
 
-                                <br />
-                                <a class="small-text" href="#">Kosárba →</a>
+                                    <!-- Ár -->
+                                    <div class="p-6 pt-0">
+                                        <div class="text-lg font-bold text-red-600">
+                                            <%= pizza.price %> Ft
+                                        </div>
+                                    </div>
+
+                                    <br />
+                                    <a class="small-text" href="/rendeles/<%= pizza.id %>">Kosárba →</a>
+
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
 
+                    </div>
                 <% }) %>
 
             <% } else { %>
 
-                <!-- Üres lista -->
                 <p class="col-span-full text-center text-gray-500 py-10">
                     Jelenleg nincs pizza az étlapon az adatbázisban.
                 </p>
@@ -54,7 +55,6 @@
             <% } %>
 
         </div>
-        <!-- Menu section ends -->
 
     </div>
-</div><!-- Menu section begins -->
+</div>
